--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   },
   "homepage": "https://github.com/rcowles3/FitRep-Fitness#readme",
   "dependencies": {
+    "body-parser": "^1.17.2",
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
+    "express-handlebars": "^3.0.0",
     "mysql2": "^1.4.0",
     "sequelize": "^4.4.2",
     "sequelize-cli": "^2.8.0"
