--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,6 @@
 {
     "development": {
-        "username": "root",
+        "username": "mrryan1",
         "password": null,
         "database": "database_development",
         "host": "127.0.0.1",
@@ -14,7 +14,7 @@
         "dialect": "mysql"
     },
     "production": {
-        "username": "root",
+        "username": "mrryan1",
         "password": null,
         "database": "database_production",
         "host": "127.0.0.1",
