--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
     "express-handlebars": "^3.0.0",
+    "method-override": "^2.3.9",
     "mysql2": "^1.4.0",
     "sequelize": "^4.4.2",
     "sequelize-cli": "^2.8.0"
