added a user model, and seeds

--- a/config/config.json
+++ b/config/config.json
@@ -1,9 +1,9 @@
 {
     "development": {
         "username": "root",
-        "password": null,
-        "database": "database_development",
-        "host": "127.0.0.1",
+        "password": "Fdd4e!i$f$",
+        "database": "FITREP_DB",
+        "host": "localhost",
         "dialect": "mysql"
     },
     "test": {
