added workouts.handlebars and fixes api-routes to get all exercises

--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,6 @@
 {
     "development": {
-        "username": "root",
+        "username": "mrryan1",
         "password": null,
         "database": "FITREP_DB",
         "host": "127.0.0.1",
