--- a/config/config.json
+++ b/config/config.json
@@ -1,8 +1,8 @@
 {
     "development": {
-        "username": "mrryan1",
+        "username": "root",
         "password": null,
-        "database": "database_development",
+        "database": "FITREP_DB",
         "host": "127.0.0.1",
         "dialect": "mysql"
     },
