--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
     "express-handlebars": "^3.0.0",
+    "handlebars-form-helpers": "^0.1.3",
     "method-override": "^2.3.9",
     "mysql": "^2.14.1",
     "mysql2": "^1.4.0",
